--- a/assets/pages/cotizar.html
+++ b/assets/pages/cotizar.html
@@ -50,7 +50,7 @@
 </main>
 <footer>
   <div class="divFooter">
-      <a href="./index.html" target="_blank"><img src="./assets/images/Fassardi Prop.png" width="100px"></a> 
+      <a href="./index.html" target="_blank"><img src="../images/Fassardi Prop.png" width="100px"></a> 
       <ul class="lineaVertical">
        <li>0810 600 1000</li>
         <li>consultas@fassardipropiedades.com</li>
