cambio de ruta en carpeta pages

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <img src="./assets/images/Fassardi Prop.jpg" alt="logo Fassardi" width="100px">
         <div class="navegador">
             <nav>
-                <a class="anclas" href="./assets/pages/comprar.html">COMPRAR</a>
-                <a class="anclas" href="./assets/pages/cotizar.html">COTIZAR</a>
-                <a class="anclas" href="./assets/pages/servicios.html">SERVICIOS</a>
-                <a class="anclas" href="./assets/pages/contacto.html">CONTACTO</a>
+                <a class="anclas" href="./pages/comprar.html">COMPRAR</a>
+                <a class="anclas" href="./pages/cotizar.html">COTIZAR</a>
+                <a class="anclas" href="./pages/servicios.html">SERVICIOS</a>
+                <a class="anclas" href="./pages/contacto.html">CONTACTO</a>
             
             </nav>
         </div>
