--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="headerPrincipal">
-        <a href="/index.html"><img src="../images/Fassardi Prop.jpg" alt="logo Fassardi" width="100px"></a>
+        <a href="/index.html"><img src="../assets/images/Fassardi Prop.jpg" alt="logo Fassardi" width="100px"></a>
          <div class="navegador">
             <nav>
                 <a class="anclas" href="./comprar.html">COMPRAR</a>
@@ -22,22 +22,22 @@
     </header>
     <main class="mainServicios">
         <div class="franjaServicios">
-            <img class="logo" src="../images/Fassardi Prop.jpg" width="150px" alt="logo Fassardi">
+            <img class="logo" src="../assets/images/Fassardi Prop.png" width="150px" alt="logo Fassardi">
             <p> <span>Nuestra Visión</span> es estar a la vanguardia del mercado inmobiliario, <br> estableciendo un nuevo estándar de atención al cliente </p>
         </div>
         <section class="servicios">
             <div class="divServicios">
-                <img src="../images/foto7.jpg" alt="imagen">
+                <img src="../assets/images/foto7.jpg" alt="imagen">
                 <h4>ASESORAMIENTO</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat ea ratione esse aliquid non suscipit aliquam quibusdam enim, explicabo repellat, doloribus dolores magnam quasi beatae. Quod quos vel pariatur.</p>
             </div>
             <div class="divServicios">
-                <img src="../images/foto7.jpg" alt="imagen">
+                <img src="../assets/images/foto7.jpg" alt="imagen">
                 <h4>EMPRENDIMIENTOS</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat ea ratione esse aliquid non suscipit aliquam quibusdam enim, explicabo repellat, doloribus dolores magnam quasi beatae. Quod quos vel pariatur.</p>
             </div>
             <div class="divServicios">
-                <img src="../images/foto7.jpg" alt="imagen">
+                <img src="../assets/images/foto7.jpg" alt="imagen">
                 <h4>SE PARTE</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat ea ratione esse aliquid non suscipit aliquam quibusdam enim, explicabo repellat, doloribus dolores magnam quasi beatae. Quod quos vel pariatur.</p>
             </div>
@@ -45,7 +45,7 @@
     </main>
     <footer>
         <div class="divFooter">
-            <a href="./index.html" target="_blank"><img src="../images/Fassardi Prop.png" width="100px"></a> 
+            <a href="./index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
             <ul class="lineaVertical">
                 <li>0810 600 1000</li>
                 <li>consultas@fassardipropiedades.com</li>
