--- a/pages/cotizar.html
+++ b/pages/cotizar.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fassardi | Contizar</title>
     <link rel="icon" href="../assets/images/Fassardi icon.png">
-    <link rel="stylesheet" href="/CSS/estilos.css">
+    <link rel="stylesheet" href="..CSS/estilos.css">
     <script src="https://kit.fontawesome.com/09d3962ac2.js" crossorigin="anonymous"></script>
 </head>
 <body>
