cambio ruta de logo hacia el index.html

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="headerPrincipal">
-        <a href="/index.html"><img src="../assets/images/Fassardi Prop.jpg" alt="logo Fassardi" width="100px"></a>
+        <a href="../index.html"><img src="../assets/images/Fassardi Prop.jpg" alt="logo Fassardi" width="100px"></a>
         <div class="navegador">
             <nav>
                 <a class="anclas" href="./comprar.html">COMPRAR</a>
@@ -44,7 +44,7 @@
     </main>
     <footer>
         <div class="divFooter">
-            <a href="./index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
+            <a href="../index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
             <ul class="lineaVertical">
              <li>0810 600 1000</li>
               <li>consultas@fassardipropiedades.com</li>
