--- a/pages/cotizar.html
+++ b/pages/cotizar.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fassardi | Contizar</title>
     <link rel="icon" href="../assets/images/Fassardi icon.png">
-    <link rel="stylesheet" href="..CSS/estilos.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <script src="https://kit.fontawesome.com/09d3962ac2.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header class="headerPrincipal">
-    <a href="/index.html"><img src="../assets/images/Fassardi Prop.jpg" alt="logo Fassardi" width="100px"></a>
+    <a href="../index.html"><img src="../assets/images/Fassardi Prop.jpg" alt="logo Fassardi" width="100px"></a>
      <div class="navegador">
         <nav>
             <a class="anclas" href="./comprar.html">COMPRAR</a>
@@ -50,7 +50,7 @@
 </main>
 <footer>
   <div class="divFooter">
-      <a href="./index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
+      <a href="../index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
       <ul class="lineaVertical">
        <li>0810 600 1000</li>
         <li>consultas@fassardipropiedades.com</li>
