Cambios a la pre-entrega

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -23,21 +23,21 @@
     <main class="mainServicios">
         <div class="franjaServicios">
             <img class="logo" src="../assets/images/Fassardi Prop.png" width="150px" alt="logo Fassardi">
-            <p> <span>Nuestra Visión</span> es estar a la vanguardia del mercado inmobiliario, <br> estableciendo un nuevo estándar de atención al cliente </p>
+            <h1> Nuestra Visión</span> es estar a la vanguardia del mercado inmobiliario, estableciendo  <br> <span class="fuenteBold">un nuevo estándar de atención al cliente</span> </h1>
         </div>
         <section class="servicios">
             <div class="divServicios">
-                <img src="../assets/images/foto7.jpg" alt="imagen">
+                <img src="../assets/images/asesoramiento.jpg" alt="imagen">
                 <h4>ASESORAMIENTO</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat ea ratione esse aliquid non suscipit aliquam quibusdam enim, explicabo repellat, doloribus dolores magnam quasi beatae. Quod quos vel pariatur.</p>
             </div>
             <div class="divServicios">
-                <img src="../assets/images/foto7.jpg" alt="imagen">
+                <img src="../assets/images/emprendimientos.jpg" alt="imagen">
                 <h4>EMPRENDIMIENTOS</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat ea ratione esse aliquid non suscipit aliquam quibusdam enim, explicabo repellat, doloribus dolores magnam quasi beatae. Quod quos vel pariatur.</p>
             </div>
             <div class="divServicios">
-                <img src="../assets/images/foto7.jpg" alt="imagen">
+                <img src="../assets/images/separte.jpg" alt="imagen">
                 <h4>SE PARTE</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum quaerat ea ratione esse aliquid non suscipit aliquam quibusdam enim, explicabo repellat, doloribus dolores magnam quasi beatae. Quod quos vel pariatur.</p>
             </div>
