--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fassardi Propiedades</title>
     <link rel="icon" href="./assets/images/Fassardi icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/estilos.css">
     <script src="https://kit.fontawesome.com/09d3962ac2.js" crossorigin="anonymous"></script>
 </head>
@@ -29,25 +30,52 @@
             <h2>Permitinos ayudarte</h2>
             <a href="/assets/pages/cotizar.html">Cotizamos tu propiedad</a>
         </div>
-        <section class="videoIndex">
-            <div class="vacio"></div>
-            <video class="video" width="100%" controls autoplay muted>
-                 <source src="./assets/videos/recorrido virtual apartamento.mp4">
-            </video>
-            <div class="descripcion1">
-                <h2>Tour Virtual</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut quia magnam laborum veritatis at dolorum ab amet quis optio perspiciatis saepe, praesentium esse nisi repellat ut itaque vero iusto sapiente!</p>
+
+        <div class="card mb-3" style="max-width: 1000px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="./assets/images/foto1.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Foto 1</h5>
+                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                      <p class="card-text"><small class="text-body-secondary">Atendemos sus consultas</small></p>
+                    </div>
+                </div>
             </div>
-            <div class="vacio"></div>
-            <div class="vacio"></div>
-            <div class="descripcion2">
-                <h2>Foto</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut quia magnam laborum veritatis at dolorum ab amet quis optio perspiciatis saepe, praesentium esse nisi repellat ut itaque vero iusto sapiente!</p>
+        <div class="card mb-3" style="max-width: 1000px;">    
+            <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="./assets/images/foto2.jpg" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                       <h5 class="card-title">Foto 2</h5>
+                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                       <p class="card-text"><small class="text-body-secondary">Atendemos sus consultas</small></p>
+                    </div>
+                </div>
+              </div>
+          
+        <div class="card mb-3" style="max-width: 1000px;">
+            <div class="row g-0">
+                <div class="col-md-8">
+                 <div class="card-body">
+                   <h5 class="card-title">Video</h5>
+                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                   <p class="card-text"><small class="text-body-secondary">Atendemos sus consultas</small></p>
+                  </div>
+                </div>
+                 <div class="col-md-4">
+                 <video class="video" width="100%" controls autoplay muted>
+                     <source src="./assets/videos/recorrido virtual apartamento.mp4">
+                  </video>
+                 </div>
+             </div>
             </div>
-            <img class="foto" src="./assets/images/foto1.jpg" alt="depto vacio" width="100%">
-            <div class="vacio"></div>
-            
-        </section>
+
+        </div>
     </main>
 
     <footer>
@@ -61,5 +89,7 @@
         </div>
         <a href="https://web.whatsapp.com/" target="_blank" ><i class="fa-brands fa-whatsapp"></i></a> 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
