--- a/pages/cotizar.html
+++ b/pages/cotizar.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fassardi | Contizar</title>
+    <title>Fassardi Propiedades</title>
     <link rel="icon" href="../assets/images/Fassardi icon.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/estilos.css">
     <script src="https://kit.fontawesome.com/09d3962ac2.js" crossorigin="anonymous"></script>
 </head>
@@ -20,34 +21,78 @@
         </nav>
       </div>
     </header>
-  <main class="mainCotizar">
     <div class="fotoCotizar">    </div>
-    <h1>Cotiza tu propiedad con especialistas</h1>
-    <form action="" class="formularioCotizar">
-      <label for="ubicacion">UBICACION</label>
-      <select name="ubicacion" id="ubicacion">
-          <option value="1">CABA</option>
-          <option value="2">AMBA</option>
-          <option value="3">Costa Atlantica</option>
-      </select>
-      <label for="ambiente">AMBIENTES</label>
-      <select name="ambientes" id="ambientes">
-          <option value="1">1 ambiente</option>
-          <option value="2">2 ambientes</option>
-          <option value="3">3 ambientes</option>
-          <option value="4">4 ambientes</optionn>
-      </select>
-      <label for="propiedad">PROPIEDAD</label>
-      <select name="propiedad" id="propiedad">
-          <option value="1">Casa</option>
-          <option value="2">Departamento</option>
-          <option value="3">Terreno</option>
-          <option value="4">Local</optionn>
-      </select>
-    </form>
-    <br>
-    <button>COTIZAR</button>
-</main>
+    <div class="Contacto">
+         <h1>Cotiza tu propiedad con nosotros</h1>
+      <main class="mainCotizar">
+      <form>
+        <fieldset class="row mb-3">
+          <legend class="col-form-label col-sm-2 pt-0">Tipo de operacion</legend>
+          <div class="col-sm-10">
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+              <label class="form-check-label" for="gridRadios1">
+                Venta
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+              <label class="form-check-label" for="gridRadios2">
+                Alquiler
+              </label>
+            </div>
+          </div>
+        </fieldset>
+
+        <div class="row mb-3">
+          <label class="visually-hidden" for="specificSizeSelect">ubicacion</label>
+          <select class="form-select" id="specificSizeSelect">
+            <option selected>Ubicacion...</option>
+            <option value="1">CABA</option>
+            <option value="2">AMBA</option>
+            <option value="3">INTERIOR</option>
+          </select>
+        </div>
+
+        <div class="row mb-3">
+          <label class="visually-hidden" for="specificSizeSelect">propiedad</label>
+          <select class="form-select" id="specificSizeSelect">
+            <option selected>Tipo de propiedad...</option>
+            <option value="1">Casa</option>
+            <option value="2">Departamento</option>
+            <option value="3">Terreno</option>
+            <option value="3">Local</option>
+          </select>
+        </div>
+        
+        <div class="row mb-3">
+          <label for="" class="col-sm-2 col-form-label">Nombre y Apellido</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control">
+          </div>
+        </div>
+        
+        <div class="row mb-3">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3">
+          </div>
+        </div>
+
+        <div class="row mb-3">
+          <div class="col-sm-10 offset-sm-2">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="gridCheck1">
+              <label class="form-check-label" for="gridCheck1">
+                Acepto terminos y condiciones
+              </label>
+            </div>
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Solicitar cotizacion</button>
+      </form>
+    </main>
+
 <footer>
   <div class="divFooter">
       <a href="../index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
@@ -59,5 +104,8 @@
   </div>
   <a href="https://web.whatsapp.com/" target="_blank" ><i class="fa-brands fa-whatsapp"></i></a> 
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
+<html>
 
