--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div class="divMain">
             <h1><span class="fuenteBold">Nuevo</span> concepto en operaciones inmobiliarias.</h1>
             <h2>Permitinos ayudarte</h2>
-            <a href="/assets/pages/cotizar.html">Cotizamos tu propiedad</a>
+            <form action="../Nuevo Proyecto/pages/cotizar.html"><button type="submit" class="btn btn-primary" id="botonCotizar" >Cotizamos tu propiedad</button>
+            </form>
         </div>
 
         <div class="card mb-3" style="max-width: 1000px;">
