cambio de link en boton

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="divMain">
             <h1><span class="fuenteBold">Nuevo</span> concepto en operaciones inmobiliarias.</h1>
             <h2>Permitinos ayudarte</h2>
-            <form action="../Nuevo Proyecto/pages/cotizar.html"><button type="submit" class="btn btn-primary" id="botonCotizar" >Cotizamos tu propiedad</button>
+            <form action="./pages/cotizar.html"><button type="submit" class="btn btn-primary" id="botonCotizar" >Cotizamos tu propiedad</button>
             </form>
         </div>
 
