recupero de validaciones

--- a/pages/cotizar.html
+++ b/pages/cotizar.html
@@ -31,13 +31,13 @@
           <legend class="col-form-label col-sm-2 pt-0">Tipo de operación</legend>
           <div class="col-sm-10">
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" >
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" >
               <label class="form-check-label" for="gridRadios1">
                 Venta
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" >
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" >
               <label class="form-check-label" for="gridRadios2">
                 Alquiler
               </label>
@@ -47,7 +47,7 @@
         </fieldset>
 
         <div class="row mb-3">
-          <label class="visually-hidden" for="specificSizeSelect">ubicación</label>
+          <label class="visually-hidden" for="specificSizeSelect1">ubicación</label>
           <select class="form-select" id="specificSizeSelect1">
             <option selected>Ubicacion...</option>
             <option value="1">CABA</option>
@@ -58,7 +58,7 @@
         </div>
 
         <div class="row mb-3">
-          <label class="visually-hidden" for="specificSizeSelect">propiedad</label>
+          <label class="visually-hidden" for="specificSizeSelect2">propiedad</label>
           <select class="form-select" id="specificSizeSelect2">
             <option selected>Tipo de propiedad...</option>
             <option value="1">Casa</option>
