--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -26,7 +26,7 @@
     <div class="Contacto">
          <h1>Dejanos tu inquietud y responderemos a la brevedad</h1>
     <main class="mainCotizar">
-      <form id="formularioCotizar">
+      <form id="formularioContacto">
         <fieldset class="row mb-3">
                
         <div class="row mb-3">
