Cambio boton de contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,8 +52,8 @@
           </div>
           <small class="text-danger d-none" id="errorMensaje">Dejenos su mensaje. </small>
         </div>
-
-        <button type="submit" class="btn btn-primary" id="botonCotizar">Enviar</button>
+      </fieldset>
+      <button type="submit" class="btn btn-primary" id="botonCotizar" style="margin-left:40%;">Enviar</button>
       </form>
       
     </main>
