consumo de API dolar

--- a/pages/comprar.html
+++ b/pages/comprar.html
@@ -54,9 +54,16 @@
                   <small id="preferencias">Guardar preferencias de busqueda </small>
                   </div>
                   <br>
-                  <button class="btn btn-primary" type="submit">BUSCAR</button>  
-                </div>
+                  <button class="btn btn-primary" type="submit">BUSCAR</button>
               </div>
+              <div class="card" style="width: 18rem;" id="buscador">
+                  <button class="btn btn-primary" type="submit" id="botonDolar">Cotización del Dolar</button>  
+              
+                <div id = "dolar">
+                <!--Aca muestra el dolar-->
+                </div>
+               </div>
+                
 
             </aside>
 
@@ -125,5 +132,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+<script src="../JS/apidolar.js"></script>
 </body>
 </html>
