Cambios en footer

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,17 +58,17 @@
       
     </main>
 
-  <footer>
+    <footer>
       <div class="divFooter">
           <a href="../index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
           <ul class="lineaVertical">
-          <li>0810 600 1000</li>
-            <li>consultas@fassardipropiedades.com</li>
-            <li>@FassardiPropiedades</li>    
+          <li>11 5053 5657</li>
+            <li><a href="https://www.instagram.com/fassardiprop/"><img src="../assets/images/logotipo-de-instagram.png" alt="logo inst" width="10%"> Instagram</a></li>
+            <li><a href="mailto:fassardipropiedades@gmail.com">fassardipropiedades@gmail.com</a></li>    
           </ul>   
       </div>
-      <a href="https://web.whatsapp.com/" target="_blank" ><i class="fa-brands fa-whatsapp"></i></a> 
-  </footer>    
+      <a href="https://web.whatsapp.com/send/?phone=1123946431&text&type=phone_number&app_absent=0" target="_blank" ><i class="fa-brands fa-whatsapp"></i></a> 
+  </footer>  
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="../JS/validacionContacto.js"></script>
