--- a/pages/cotizar.html
+++ b/pages/cotizar.html
@@ -26,18 +26,18 @@
     <div class="Contacto">
          <h1>Cotiza tu propiedad con nosotros</h1>
     <main class="mainCotizar">
-      <form id="formularioCotizar">
+      <form id="formularioCotizar" name="formulari">
         <fieldset class="row mb-3">
           <legend class="col-form-label col-sm-2 pt-0">Tipo de operación</legend>
           <div class="col-sm-10">
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" >
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="venta" >
               <label class="form-check-label" for="gridRadios1">
                 Venta
               </label>
             </div>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" >
+              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="alquiler">
               <label class="form-check-label" for="gridRadios2">
                 Alquiler
               </label>
@@ -64,7 +64,7 @@
               <option value="1">Casa</option>
               <option value="2">Departamento</option>
               <option value="3">Terreno</option>
-              <option value="3">Local</option>
+              <option value="4">Local</option>
             </select>
             <small class="text-danger d-none" id="errorPropiedades">Seleccione una opcion. </small>
           </div>
@@ -104,12 +104,12 @@
       <div class="divFooter">
           <a href="../index.html" target="_blank"><img src="../assets/images/Fassardi Prop.png" width="100px"></a> 
           <ul class="lineaVertical">
-          <li>0810 600 1000</li>
-            <li>consultas@fassardipropiedades.com</li>
-            <li>@FassardiPropiedades</li>    
+          <li>11 5053 5657</li>
+            <li><a href="https://www.instagram.com/fassardiprop/"><img src="../assets/images/logotipo-de-instagram.png" alt="logo inst" width="10%"> Instagram</a></li>
+            <li><a href="mailto:fassardipropiedades@gmail.com">fassardipropiedades@gmail.com</a></li>    
           </ul>   
       </div>
-      <a href="https://web.whatsapp.com/" target="_blank" ><i class="fa-brands fa-whatsapp"></i></a> 
+      <a href="https://web.whatsapp.com/send/?phone=1123946431&text&type=phone_number&app_absent=0" target="_blank" ><i class="fa-brands fa-whatsapp"></i></a> 
   </footer>    
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
